# morrisons-mcp

./: .env.example  .gitignore  Dockerfile  README.md  clear_cache.sh  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
instructions/: morrisons-mcp-build-doc.md
src/morrisons_mcp/: cache.py  fuzzy_matcher.py  ingredient_parser.py  mealie_client.py  models.py  morrison_client.py  nutrition_fallback.py  nutrition_parser.py  server.py  session_manager.py  weight_estimator.py
tests/: test_fuzzy_matcher.py  test_ingredient_parser.py  test_mealie_client.py  test_models.py  test_nutrition_fallback.py  test_nutrition_parser.py  test_weight_estimator.py
